--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-ssg": "^28.2.2",
     "vitest": "^1.0.4"
   }
 }
