fix: include package-lock.json for reproducible Docker builds
Remove package-lock.json from .gitignore to ensure npm ci works
correctly during Docker builds on the server.

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ temp/
 *.sqlite3
 
 # Package manager files
-package-lock.json
+# package-lock.json - committed for reproducible builds
 yarn.lock
 pnpm-lock.yaml
 poetry.lock
