--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@types/prismjs": "^1.26.5",
     "gray-matter": "^4.0.3",
     "marked": "^17.0.0",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
