--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/prismjs": "^1.26.5",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.31.0",
     "marked": "^17.0.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
